objects/RFP_Forms__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Form_Legacy_ID__c</fullName>
        <label>RFP Form Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipName>RFP_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signatures_Name__c</fullName>
        <label>Signature Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>RFP Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFP Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>